# LeMath

./: Cargo.toml  equation.pest
equation/: Cargo.toml
expr_enum/: Cargo.toml
expr_enum/src/: lib.rs
src/: equation.rs  helper.rs  lib.rs  matrix.rs  summation.rs  traitbounds.rs  vectors.rs
src/Matrix/: matrix.rs
src/Vector/: vector_math.rs
src/any_length_num/: length_num.rs  length_num_traits.rs  mod.rs
src/calculus/: mod.rs
src/calculus/derivative_items/: derivatives.rs
src/calculus/integral_items/: integrals.rs
src/complex/: complex_nums.rs  complex_traits.rs  mod.rs
src/equation_parser/: equation.rs  mod.rs
src/fraction/: fraction_traits.rs  fractions.rs  from_traits.rs  macro_traits.rs  mod.rs
src/linear_algebra/: mod.rs
src/linear_algebra/matrix_items/: matrices.rs  matrix_traits.rs  mod.rs
src/linear_algebra/vector_items/: mod.rs  vector_traits.rs  vectors.rs
src/matrix_items/: matrix.rs
src/vector/: mod.rs  vector_math.rs  vectors.rs
src/vector_items/: vector_math.rs  vectors.rs
