[package]
name = "lemath"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# Linear Algebra
vectors = []
matrices = ["vectors"]
linear-algebra = ["matrices"]

# Calculus
integrals = []
derivatives = []
calculus = ["integrals", "derivatives"]

all = ["linear-algebra", "calculus"]

[dependencies]
unstringify = "0.1.4"
equation = { path = "./equation" }