[package]
name = "lemath"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# Linear Algebra
vectors = []
matrices = ["vectors"]
linear-algebra = ["matrices"]

# Calculus
integrals = []
derivatives = ["equation-parser"]
calculus = ["integrals", "derivatives"]

equation-parser = []

all = ["linear-algebra", "calculus"]

default = ["all"]

[dependencies]
unstringify = "0.1.4"
function_from_equation = "0.1.0"
